--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,7 +5,7 @@ android {
     buildToolsVersion "23.0.2"
 
     defaultConfig {
-        applicationId "demo.tokbox.com.multiparty"
+        applicationId "demo.tokbox.com.MultipartyActivity"
         minSdkVersion 15
         targetSdkVersion 23
         versionCode 1
