--- a/app/build.gradle
+++ b/app/build.gradle
@@ -10,6 +10,7 @@ android {
         targetSdkVersion 23
         versionCode 1
         versionName "1.0"
+        multiDexEnabled true
     }
 
     sourceSets {
@@ -33,7 +34,7 @@ android {
 }
 
 dependencies {
-    compile fileTree(dir: 'libs', include: ['*.jar'])
+    compile files('libs/opentok-android-sdk.jar')
     compile 'commons-codec:commons-codec:1.8'
     compile 'org.apache.commons:commons-io:1.3.2'
     testCompile 'junit:junit:4.12'
