--- a/app/build.gradle
+++ b/app/build.gradle
@@ -34,7 +34,7 @@ android {
 }
 
 dependencies {
-    compile files('libs/opentok-android-sdk.jar')
+    compile files('libs/opentok-android-sdk-2.7.0.jar')
     compile 'commons-codec:commons-codec:1.8'
     compile 'org.apache.commons:commons-io:1.3.2'
     testCompile 'junit:junit:4.12'
