--- a/app/build.gradle
+++ b/app/build.gradle
@@ -6,7 +6,7 @@ android {
 
     defaultConfig {
         applicationId "demo.tokbox.com.MultipartyActivity"
-        minSdkVersion 15
+        minSdkVersion 16
         targetSdkVersion 22
         versionCode 1
         versionName "1.0"
@@ -44,7 +44,7 @@ android {
 }
 
 dependencies {
-    compile files('libs/opentok-android-sdk-2.7.0.jar')
+    compile(name:'opentok-android-sdk-webrtc-release', ext:'aar')
     compile 'commons-codec:commons-codec:1.8'
     compile 'org.apache.commons:commons-io:1.3.2'
     testCompile 'junit:junit:4.12'
