--- a/build.gradle
+++ b/build.gradle
@@ -17,6 +17,9 @@ allprojects {
     repositories {
         jcenter()
         mavenCentral()
+        flatDir {
+            dirs 'libs'
+        }
     }
 }
 
